--- a/config/user_data.yml
+++ b/config/user_data.yml
@@ -77,7 +77,7 @@ userdata:
     yum clean all
     yum install -y curl
     echo 'nameserver MASTERSERVER' > /etc/resolv.conf
-    curl -k https://master.inf.puppetlabs.demo:8140/packages/current/install.bash | sudo bash
+    curl -k https://master.example.demo:8140/packages/current/install.bash | sudo bash
 
   centos_master: |
     #!/bin/bash
@@ -131,5 +131,19 @@ userdata:
     echo "${PIPV4} ${PHOST} ${SHOST}" >> /etc/hosts
     echo 'nameserver MASTERSERVER' > /etc/resolv.conf
 
-    curl -k https://master.inf.puppetlabs.demo:8140/packages/current/install.bash | sudo bash
+    curl -k https://master.example.demo:8140/packages/current/install.bash | sudo bash
+
+  ubuntu: |
+    #!/bin/bash
+    sed -i 's/Defaults    requiretty//g' /etc/sudoers
+    apt-get update
+    apt-get install -y curl
+
+    PHOST=$(curl http://169.254.169.254/latest/meta-data/public-hostname)
+    SHOST=$(curl -s http://169.254.169.254/latest/meta-data/public-hostname|awk -F '.' '{print $1}')
+    PIPV4=$(ifconfig -a|grep -w inet|awk '{print $2}'|grep 192|sed 's/addr\://g')
+    echo "${PIPV4} ${PHOST} ${SHOST}" >> /etc/hosts
+    echo 'nameserver MASTERSERVER' > /etc/resolv.conf
+
+    curl -k https://master.example.demo:8140/packages/current/install.bash | sudo bash
 
