--- a/config/platforms.yml
+++ b/config/platforms.yml
@@ -4,23 +4,29 @@ platforms:
     image: centos_7_x86_64
     sync_method: rsync
     user_data: centos
+    roles:
+      - posix_agent
 
   centos7_master:
     image: centos_7_x86_64
     roles:
       - puppet_master
     sync_method: rsync
-    user_data: centos_master
+    user_data: centos
 
   centos6:
     image: centos_6_x86_64
     sync_method: rsync
     user_data: centos
+    roles:
+      - posix_agent
 
   debian8:
     image: debian_8.2.0_x86_64
     ssh_username: debian
     user_data: debian
+    roles:
+      - posix_agent
 
   server2012:
     image: windows_2012_r2_std_eval_x86_64
@@ -28,9 +34,13 @@ platforms:
     ssh_disabled: true
     user_data: windows
     guest_type: windows
+    roles:
+      - windows_agent
 
   ubuntu1404:
     image: ubuntu_14.04_x86_64
     ssh_username: ubuntu
     user_data: ubuntu
     flavor: g1.small
+    roles:
+      - posix_agent
